--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
     <link
       rel="stylesheet"
@@ -33,77 +34,46 @@
   </head>
   <body>
     <div class="main-container">
-      <header><img src="images/logo.svg" alt="" /></header>
+      <header class="header-image"><img src="images/logo.svg" alt="" /></header>
       <div class="content-text">
-        <h1>We are launching soon!</h1>
+        <h1><span> We are launching</span> soon!</h1>
         <p>Subscribe and get notified</p>
       </div>
-      <div class="email">
+      <div class="email-wrapper">
+        <form id="email-form" name="email-form" action="" method="post" required>
         <input
           id="email"
           class="email"
-          type="email"
+          type="text"
           name="email"
           placeholder="Your email address..."
         />
-        <button id="email-btn" class="email-btn">Notify Me</button>
+        <button id="email-btn" class="email-btn">Notify Me</button><br>
+        <p class="err-massage" id="err-massage" ></p>
+
+      </form>
+
       </div>
+      <img
+        class="illustration-dashboard"
+        src="images/illustration-dashboard.png"
+        alt=""
+      />
       <div class="social-icons-container">
         <div class="icon-facebook">
-          <svg
-            width="50"
-            enable-background="new 0 0 48 48"
-            id="Layer_1"
-            version="1.1"
-            viewBox="0 0 48 48"
-            xml:space="preserve"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-          >
-            <circle cx="24" cy="24" fill="#4E71A8" r="24" />
-            <path
-              d="M29.9,19.5h-4v-2.6c0-1,0.7-1.2,1.1-1.2c0.5,0,2.8,0,2.8,0v-4.4l-3.9,0c-4.4,0-5.3,3.3-5.3,5.3v2.9h-2.5V24  h2.5c0,5.8,0,12.7,0,12.7h5.3c0,0,0-7,0-12.7h3.6L29.9,19.5z"
-              fill="#FFFFFF"
-            />
-          </svg>
+          <a href="#">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
         </div>
         <div class="icon-twitter">
-          <svg
-            width="50"
-            enable-background="new 0 0 48 48"
-            id="Layer_1"
-            version="1.1"
-            viewBox="0 0 48 48"
-            xml:space="preserve"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-          >
-            <circle cx="24" cy="24" fill="#1CB7EB" r="24" />
-            <g>
-              <g>
-                <path
-                  d="M36.8,15.4c-0.9,0.5-2,0.8-3,0.9c1.1-0.7,1.9-1.8,2.3-3.1c-1,0.6-2.1,1.1-3.4,1.4c-1-1.1-2.3-1.8-3.8-1.8    c-2.9,0-5.3,2.5-5.3,5.7c0,0.4,0,0.9,0.1,1.3c-4.4-0.2-8.3-2.5-10.9-5.9c-0.5,0.8-0.7,1.8-0.7,2.9c0,2,0.9,3.7,2.3,4.7    c-0.9,0-1.7-0.3-2.4-0.7c0,0,0,0.1,0,0.1c0,2.7,1.8,5,4.2,5.6c-0.4,0.1-0.9,0.2-1.4,0.2c-0.3,0-0.7,0-1-0.1    c0.7,2.3,2.6,3.9,4.9,3.9c-1.8,1.5-4.1,2.4-6.5,2.4c-0.4,0-0.8,0-1.3-0.1c2.3,1.6,5.1,2.6,8.1,2.6c9.7,0,15-8.6,15-16.1    c0-0.2,0-0.5,0-0.7C35.2,17.6,36.1,16.6,36.8,15.4z"
-                  fill="#FFFFFF"
-                />
-              </g>
-            </g>
-          </svg>
+          <a href="#">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
         </div>
         <div class="icon-instagram">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="50"
-            viewBox="0 0 3333 3333"
-            shape-rendering="geometricPrecision"
-            text-rendering="geometricPrecision"
-            image-rendering="optimizeQuality"
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-          >
-            <path
-              d="M1667 0c920 0 1667 746 1667 1667 0 920-746 1667-1667 1667C747 3334 0 2588 0 1667 0 747 746 0 1667 0zm-390 752h780c293 0 532 237 532 525v778c0 289-239 525-532 525h-780c-293 0-532-236-532-525v-778c0-289 240-525 532-525zm385 421c285 0 516 231 516 516s-231 516-516 516-516-231-516-516 231-516 516-516zm0 174c188 0 341 153 341 341s-153 341-341 341c-189 0-341-153-341-341s153-341 341-341zm499-246c46 0 84 37 84 84 0 46-37 84-84 84-46 0-84-37-84-84 0-46 37-84 84-84zm-820-200h652c245 0 445 199 445 443v656c0 244-200 443-445 443h-652c-245 0-445-199-445-443v-656c0-244 200-443 445-443z"
-            />
-          </svg>
+          <a href="#">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
         </div>
       </div>
       <div class="copy-right">&copy; Copyright Ping. All rights reserved.</div>
@@ -113,7 +83,7 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="#">Your Name Here</a>.
+          >. Coded by <a href="#">agyanim</a>.
         </p>
       </footer>
     </div>
